cropper and no works fix

--- a/src/pages/contestPage/ui/components/worksListSection/worksList.scss
+++ b/src/pages/contestPage/ui/components/worksListSection/worksList.scss
@@ -10,6 +10,16 @@
         grid-template-columns: repeat(auto-fill, minmax(458px, 1fr));
         gap: 20px;
     }
+
+    > .worksList_noWorks{
+        height: 400px;
+        font-weight: 600;
+        font-size: 24px;
+        opacity: 0.5;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
 }
 
 @media (max-width: 850px) {
